--- a/markup/scss/layout/3.module/_table.scss
+++ b/markup/scss/layout/3.module/_table.scss
@@ -67,7 +67,7 @@
 
 	th {
 		background: $default;
-		color: $primary;
+		color: $default;
 		@include media('>=tablet') {
 			background: #ededed;
 			// padding-right: 220px;
