--- a/markup/scss/layout/5.pages/_media.scss
+++ b/markup/scss/layout/5.pages/_media.scss
@@ -1,9 +1,10 @@
-.profile__main {
+.media__main {
 	.site-panel {
 		justify-content: flex-start;
 	}
 		.form__action{ 
-			padding: 0 20px 0 0 ;}
+			padding: 0 20px 0 0 ;
+		}
 			.profile__img{
 				display: flex;
 				flex-direction: column;
@@ -11,8 +12,8 @@
 			}
 			.profile--img {
 				img{
-					width: 250px;
-					height: 250px;
+					width: 50px;
+					height: 50px;
 					object-fit: cover;
 				}
 			}
@@ -20,7 +21,7 @@
 
 				.custom-photo-upload {
 					display: inline-block;
-					padding: 8px 48px;
+					padding: 8px 40px;
 					cursor: pointer;
 					font-size: 16px;
 					border-radius: 5px;
