--- a/markup/scss/layout/5.pages/_inventory.scss
+++ b/markup/scss/layout/5.pages/_inventory.scss
@@ -82,6 +82,7 @@
 				font-size: 14px;
 				height: 30px;
 				justify-content: flex-end;
+				padding: 0 0 0 10px;
 
 				.primary-tint {
 					height: 30px;
