--- a/markup/scss/layout/5.pages/_media.scss
+++ b/markup/scss/layout/5.pages/_media.scss
@@ -2,33 +2,33 @@
 	.site-panel {
 		justify-content: flex-start;
 	}
-		.form__action{ 
-			padding: 0 20px 0 0 ;
+	.form__action{ 
+		padding: 0 20px 0 0 ;
+	}
+	.profile__img{
+		display: flex;
+		flex-direction: column;
+		align-items: flex-end;
+	}
+	.profile--img {
+		img{
+			width: 50px;
+			height: 50px;
+			object-fit: cover;
 		}
-			.profile__img{
-				display: flex;
-				flex-direction: column;
-				align-items: center;
-			}
-			.profile--img {
-				img{
-					width: 50px;
-					height: 50px;
-					object-fit: cover;
-				}
-			}
-			.upload {
+	}
+	.upload {
 
-				.custom-photo-upload {
-					display: inline-block;
-					padding: 8px 40px;
-					cursor: pointer;
-					font-size: 16px;
-					border-radius: 5px;
-				}
-
-				input[type=file] {
-					display: none;
-				}
-			}
+		.custom-photo-upload {
+			display: inline-block;
+			padding: 8px 40px;
+			cursor: pointer;
+			font-size: 16px;
+			border-radius: 5px;
 		}
+
+		input[type=file] {
+			display: none;
+		}
+	}
+}
