--- a/markup/scss/layout/3.module/_table.scss
+++ b/markup/scss/layout/3.module/_table.scss
@@ -33,7 +33,7 @@
 		padding: 10px 12px;
 		@include media('>=tablet') {
 			border-width: 1px;
-			padding: 8px 25px;
+			// padding: 8px 25px;
 		}
 	}
 
