--- a/markup/scss/layout/5.pages/_dashboard.scss
+++ b/markup/scss/layout/5.pages/_dashboard.scss
@@ -86,10 +86,8 @@
 		.panel {
 			box-shadow: 0 1rem 3rem rgba(132, 139, 200, 0.1);
 			background: $white;
-			padding: 20px 10px;
+			padding: 15px 10px;
 			border-radius: 5px;
-		}
-		.sales {
 		}
 		h3 {
 			margin: 1rem 0 0.6rem;
@@ -106,8 +104,10 @@
 		}
 
 		small {
-			margin-top: 1.3rem;
+			background: #F0F8FF;
+			margin-top: 15px;
 			display: block;
+			padding: 10px;
 		}
 	}
 
