--- a/markup/scss/layout/5.pages/_inventory.scss
+++ b/markup/scss/layout/5.pages/_inventory.scss
@@ -143,11 +143,13 @@
 			}
 
 			td{
-				line-height: 0.8;
-				font-size: 13px;
+				line-height: 1.5;
+				font-size: 14px;
 			}
 
 			th {
+				background: $primary;
+				color: $white;
 				line-height: 1.5;
 				border-color: #efefef;
 				font-size: 14px;
