--- a/markup/scss/layout/5.pages/_dashboard.scss
+++ b/markup/scss/layout/5.pages/_dashboard.scss
@@ -20,7 +20,8 @@
 				box-shadow: none;
 			}
 			th {
-				color: $default;
+				background: $primary;
+				color: $white;
 			}
 			tbody td {
 				height: 1.8rem;
