--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -2733,7 +2733,8 @@ a {
   width: 60px; }
 
 .tbl-wrap th {
-  background: #363636;
+  background: #00435B;
+  color: #fff;
   color: #363636; }
   @media (min-width: 768px) {
     .tbl-wrap th {
@@ -3590,7 +3591,8 @@ button.mfp-arrow {
     .adm-dashboard__main .recent-orders table:hover {
       box-shadow: none; }
     .adm-dashboard__main .recent-orders table th {
-      color: #363636; }
+      background: #00435B;
+      color: #fff; }
     .adm-dashboard__main .recent-orders table tbody td {
       height: 1.8rem;
       border-bottom: 1px solid rgba(132, 139, 200, 0.1);
@@ -4202,8 +4204,7 @@ button.mfp-arrow {
           align-items: flex-end; }
 
 .media__main .profile--img img {
-  width: 50px;
-  height: 50px;
+  width: 30px;
   object-fit: cover; }
 
 .media__main .upload .custom-photo-upload {
