--- a/markup/scss/layout/3.module/_table.scss
+++ b/markup/scss/layout/3.module/_table.scss
@@ -66,7 +66,9 @@
 	}
 
 	th {
-		background: $default;
+		// background: $default;
+		background: $primary;
+		color: $white;
 		color: $default;
 		@include media('>=tablet') {
 			background: #ededed;
