--- a/markup/scss/layout/5.pages/_dashboard.scss
+++ b/markup/scss/layout/5.pages/_dashboard.scss
@@ -53,7 +53,7 @@
 
 	.date input[type="date"] {
 		background: transparent;
-		color: $primary;
+		color: $default;
 		border: none;
 	}
 
@@ -156,43 +156,44 @@
 
 	.sales-analytics {
 		margin-top: 2rem;
-	}
-	.sales-analytics h2 {
-		margin-bottom: 0.8rem;
-	}
 
-	.sales-analytics .item {
-		background: $white;
-		display: flex;
-		align-items: center;
-		gap: 1rem;
-		margin-bottom: 0.7rem;
-		padding: 1.4rem  1.8rem;
-		border-radius: 10px;
-		box-shadow: 0 1rem 3rem rgba(132, 139, 200, 0.1);
-		transition: all 300ms ease;
-	}
-
-	.sales-analytics .item:hover {
-		box-shadow: none;
-	}
-
-	.sales-analytics .item .right {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		align-items: center;
-		margin: 0;
-		width: 100%;
-		color: $primary;
-
-		h3 {
-			font-size: 0.87rem;
+		h2 {
+			margin-bottom: 0.8rem;
 		}
-		.info {
+
+		.item {
+			background: $white;
+			display: flex;
+			align-items: center;
+			gap: 1rem;
+			margin-bottom: 0.7rem;
+			padding: 1.4rem  1.8rem;
+			border-radius: 10px;
+			box-shadow: 0 1rem 3rem rgba(132, 139, 200, 0.1);
+			transition: all 300ms ease;
+		}
+
+		.item:hover {
+			box-shadow: none;
+		}
+
+		.item .right {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			align-items: center;
+			margin: 0;
+			width: 100%;
+			color: $primary;
+
 			h3 {
-				color: $primary;
 				font-size: 0.87rem;
+			}
+			.info {
+				h3 {
+					color: $primary;
+					font-size: 0.87rem;
+				}
 			}
 		}
 	}
