--- a/markup/scss/main.scss
+++ b/markup/scss/main.scss
@@ -91,6 +91,7 @@
 @import 'layout/5.pages/report';
 @import 'layout/5.pages/profile';
 @import 'layout/5.pages/media';
+@import 'layout/5.pages/salereport';
 // @import 'layout/5.pages/single';
 // @import 'layout/5.pages/fancy-modal';
 // @import 'layout/5.pages/404';
