--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -2570,70 +2570,48 @@ a {
 .site__nav {
   padding: 30px 0;
   position: fixed; }
-  .site__nav > ul li:last-child {
-    position: absolute;
-    top: 33rem;
-    width: 100%; }
+  .site__nav .rotate {
+    -webkit-transform: rotate(90deg);
+        -ms-transform: rotate(90deg);
+            transform: rotate(90deg); }
   .site__nav > ul > li > .knav {
+    position: relative;
     width: 200px; }
     .site__nav > ul > li > .knav a {
       color: #fff;
       display: block;
       padding: 18px 50px 18px 30px; }
+      .site__nav > ul > li > .knav a .icon, .site__nav > ul > li > .knav a [class^="icon-"], .site__nav > ul > li > .knav a [class*="icon-"], .site__nav > ul > li > .knav a [class*="dd-icon-"], .site__nav > ul > li > .knav a .arrow-rt:after {
+        font-size: 0.9rem; }
       .site__nav > ul > li > .knav a span {
-        font-size: 0.9rem;
         -webkit-transition: all 500ms ease;
         transition: all 500ms ease; }
       .site__nav > ul > li > .knav a:hover {
         width: 100%;
         background: #006184;
         border-right: 3px solid #fff; }
-        .site__nav > ul > li > .knav a:hover span {
-          margin-left: 0.01rem;
-          font-size: 0.92rem; }
     .site__nav > ul > li > .knav button {
-      display: none; }
-  .site__nav > ul > li > .kdrop {
-    display: none; }
-  .site__nav .kdrop > ul > li > a {
-    color: #fff; }
-
-.pnlsearch__form {
-  border: 1px solid #dedede;
-  border-radius: 5px;
-  padding: 3px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  position: absolute;
-  top: 12px;
-  right: 700px;
-  left: 220px; }
-  .pnlsearch__form .form__set {
-    -ms-flex-preferred-size: 0;
-        flex-basis: 0;
-    -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
-    max-width: 100%; }
-    .pnlsearch__form .form__set input {
+      bottom: 1rem;
+      left: 10rem;
+      position: absolute;
       background: transparent;
       border: none;
-      height: 25px;
-      padding: 0.2em 0.5em; }
-  .pnlsearch__form button {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 17px;
-            flex: 0 0 17px;
-    background: transparent;
-    border: none;
-    margin: 0;
-    padding: 0;
-    width: 17px;
-    height: 17px; }
+      color: #fff; }
+  .site__nav > ul > li > .kdrop {
+    display: none; }
+  .site__nav .kdrop > ul {
+    padding: 0 0 8px 40px; }
+    .site__nav .kdrop > ul > li {
+      width: 100%;
+      border-left: 2px solid #004e6a; }
+      .site__nav .kdrop > ul > li > a {
+        display: block;
+        padding: 15px 30px 15px 10px;
+        color: #fff; }
+        .site__nav .kdrop > ul > li > a:hover {
+          width: 100%;
+          background: #006184;
+          border-right: 3px solid #fff; }
 
 .pagination > ul {
   margin: 0 -2px 0 -3px;
